<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/accedi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="5dp"
        android:text="@string/str_accedi"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_weight="0"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_mail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:hint="mario.rossi@esempio.com">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/la_tua_pwd"
        android:transitionName="password_tran">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginBtn"
        android:backgroundTint="@color/verde_scuro"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/registrationBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registratiBtn"
        android:backgroundTint="@color/verde_scuro"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp" />

</LinearLayout>