<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ruolo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="5dp"
        android:text="@string/splash"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu_ruolo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:hint="Sono un...">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/prosegui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prosegui"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/switchToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_accedi"
        android:gravity="center|bottom"
        android:layout_marginTop="8dp"
        />

</LinearLayout>