<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"
            android:queryHint="@string/cerca"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="30">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prezzo"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/prezzo_max"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fino_a">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="40">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disp_spedire"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/spedizioneAcTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="30">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distanza"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/distanza"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ovunque">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">


            <Button
                android:id="@+id/btn_filtri"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/baseline_filtri_search_24"
                android:text="@string/cerca"
                android:layout_gravity="center"
                android:layout_weight="75"/>

            <TextView
                android:id="@+id/salvaRicerca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salva_ricerca"
                android:textColor="@color/quantum_yellow700"
                android:clickable="true"
                android:textSize="15sp"
                android:textStyle="bold"
                android:focusable="true"
                android:layout_weight="25"
                android:layout_gravity="center|end"
                android:layout_marginStart="10dp" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listView_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="5"
            tools:listitem="@layout/item_annuncio" />

    </LinearLayout>
</ScrollView>