<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:id="@+id/autocomplete_container"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titolo_add"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30dp"/>

        <TextView
            android:id="@+id/nomeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_articolo"
            android:textSize="16sp"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/nomeAcTv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Inserisci titolo dell'annuncio"/>


        <TextView
            android:id="@+id/categoriaTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_articolo"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categoria"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:hint="Seleziona categoria dell'annuncio">

            <AutoCompleteTextView
                android:id="@+id/categoriaAcTv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/descrizioneTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_articolo"
            android:textSize="16sp"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:id="@+id/descrizioneAcTv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Inserisci descrizione dell'annuncio"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/stato"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_weight="70"
                android:layout_height="wrap_content"
                android:hint="Condizioni oggetto">

                <AutoCompleteTextView
                    android:id="@+id/statoAcTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/prezzo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:hint="Prezzo">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Switch
            android:id="@+id/switchSpediz"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/switch_spediz" />

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/quantum_grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fraseImmagini"
            android:textSize="12dp"
            android:layout_marginTop="3dp"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/iv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icona_immagine"
            android:layout_margin="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/pickUpImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Scegli"
                android:backgroundTint="@color/panna"
                android:textColor="@color/black"
                android:layout_marginEnd="5dp"
                android:visibility="visible"
                android:clickable="true"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/baseline_arrow_forward_24"/>

            <Button
                android:id="@+id/uploadImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Carica"
                android:textColor="@color/white"
                android:layout_marginStart="5dp"
                android:backgroundTint="@color/verde_scuro"
                android:enabled="false"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/quantum_grey"/>


        <fragment
            android:id="@+id/myMap"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:name="com.google.android.gms.maps.SupportMapFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/cerca_luogo"
                    android:textColor="@color/design_default_color_error"
                    android:inputType="textPersonName"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textColor="@color/white"
                    android:onClick="searchLocation"
                    android:text="@string/cerca"/>

            </LinearLayout>

        </fragment>

        <Button
            android:id="@+id/btn_salva_localizzazione"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:text="Salva localizzazione"
            android:layout_gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@color/quantum_grey"/>


        <Button
            android:id="@+id/btnCaricaAnn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crea_ann"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/verde_scuro"/>

    </LinearLayout>
</ScrollView>



