<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/baseline_manage_accounts_48"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/nomeUtente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text=" Ludovico"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/baseline_badge_24"/>

                <TextView
                    android:id="@+id/ruolo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amm"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/baseline_call_24"/>

                <TextView
                    android:id="@+id/num_tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" 3459032643"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/verde_scuro"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stat"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ut_reg"/>

        <TextView
            android:id="@+id/num_utenti_tot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="37"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/an_vendita"/>

        <TextView
            android:id="@+id/num_oggetti_tot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="37"
            android:textColor="@color/black"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/an_per_utente"
        android:layout_marginStart="5sp"
        android:layout_marginTop="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/utenti"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_weight="57"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/seleziona">

            <AutoCompleteTextView
                android:id="@+id/edit_utenti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_mostra_annunci"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/mostra"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/panna"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_weight="36"
            android:drawableRight="@drawable/baseline_arrow_forward_24"/>

        <TextView
            android:id="@+id/num_annunci_utente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="3"
            android:textSize="15sp"
            android:layout_weight="7"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"/>

    </LinearLayout>

</LinearLayout>